JDK24 upgrade related: allow Netty to use Unsafe